# sago

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  Sago.toml  clippy.toml  rustfmt.toml
.github/workflows/: ci.yml
.jules/: sentinel.md
docs/: BENCHMARKS.md  DECENTRALIZED.md  ROADMAP.md  TECHNICAL_SPECIFICATIONS.md
sago-cli/: Cargo.toml
sago-cli/src/: main.rs  report.rs
sago-cli/src/commands/: apply.rs  diff.rs  domains.rs  explore.rs  federate.rs  init.rs  mod.rs  plan.rs
sago-cli/tests/: cli.rs
sago-core/: Cargo.toml
sago-core/benches/: merkle.rs
sago-core/src/: config.rs  connection.rs  diff.rs  drift.rs  lib.rs  merge.rs  merkle.rs  postgres.rs  rbac.rs  registry.rs  rename.rs  s3.rs  schema_codec.rs  semantic.rs  state.rs
sago-proto/: Cargo.toml  build.rs
sago-proto/proto/sago/v1/: sago.proto
sago-proto/src/: lib.rs
sago-sdk/: Cargo.toml
sago-sdk/examples/: grpc_server.rs
sago-sdk/src/: client.rs  grpc.rs  lib.rs
sago-sdk/tests/: grpc.rs
sago-wasm/: Cargo.toml
sago-wasm/src/: lib.rs
