[workspace]
members = [
    "sago-core",
    "sago-cli",
    "sago-sdk",
    "sago-proto",
]
resolver = "2"

[workspace.dependencies]
arrow = "53.0"
async-trait = "0.1"
tokio = { version = "1.37", features = ["full"] }
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
clap = { version = "4.5", features = ["derive"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
prost = "0.12"
tonic = "0.11"
aws-sdk-s3 = "1.17"
tonic-build = "0.11"
chrono = "0.4.38"
