[workspace]
members = [
    "sago-core",
    "sago-cli",
    "sago-sdk",
    "sago-proto",
]
resolver = "2"

[workspace.dependencies]
arrow = "58.0"
async-trait = "0.1"
tokio = { version = "1.49", features = ["full"] }
thiserror = "2.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
clap = { version = "4.5", features = ["derive"] }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
prost = "0.14"
tonic = "0.14"
aws-sdk-s3 = "1.124"
object_store = { version = "0.11", features = ["aws"] }
parquet = "58.0"
bytes = "1.9"
tonic-build = "0.14"
chrono = "0.4"
