[workspace]
members = [
    "sago-core",
    "sago-cli",
    "sago-sdk",
    "sago-proto",
    "sago-wasm",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
# MSRV is driven by the dependency tree, not the crate's own code: ratatui 0.30
# and tonic 0.14 require 1.88, and transitive deps (e.g. crc-fast) require 1.89.
# Verified against 1.89 in CI.
rust-version = "1.89"
authors = ["Yuttapichai"]
license = "MIT"
repository = "https://github.com/naiiytom/sago"
homepage = "https://github.com/naiiytom/sago"
readme = "README.md"
keywords = ["dataops", "data-quality", "drift-detection", "arrow", "schema"]
categories = ["command-line-utilities", "database"]

[workspace.dependencies]
arrow = "59.0"
async-trait = "0.1"
tokio = { version = "1.49", features = ["full"] }
thiserror = "2.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
clap = { version = "4.5", features = ["derive"] }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "chrono", "bigdecimal"] }
serde = { version = "1.0", features = ["derive"] }
toml = "1.0"
object_store = { version = "0.14", features = ["aws"] }
parquet = "59.0"
bytes = "1.9"
ratatui = "0.30"
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
tempfile = "3.10"
assert_cmd = "2.0"
predicates = "3.1"
