[package]
name = "sago-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Sago command-line interface: init, apply, plan, diff, and an interactive TUI explorer."

[[bin]]
name = "sago"
path = "src/main.rs"

[dependencies]
sago-core = { path = "../sago-core", version = "0.1.0" }
clap.workspace = true
tokio.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde_json.workspace = true
chrono.workspace = true
serde = { workspace = true }
ratatui.workspace = true

[dev-dependencies]
assert_cmd.workspace = true
predicates.workspace = true
tempfile.workspace = true
toml.workspace = true
