[package]
name = "sago-core"
version = "0.1.0"
edition = "2024"

[dependencies]
arrow.workspace = true
parquet.workspace = true
object_store.workspace = true
bytes.workspace = true
async-trait.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
serde.workspace = true
toml.workspace = true
tokio.workspace = true
sqlx.workspace = true
aws-sdk-s3.workspace = true
