[package]
name = "sago-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Core engine for Sago: cross-modal diffing, semantic schema analysis, and statistical drift detection."

[dependencies]
arrow.workspace = true
parquet.workspace = true
object_store.workspace = true
bytes.workspace = true
async-trait.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
serde.workspace = true
toml.workspace = true
tokio.workspace = true
sqlx.workspace = true
regex = "1.12"
serde_json.workspace = true
chrono.workspace = true

[dev-dependencies]
tempfile.workspace = true
