[package]
name = "sago-proto"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "gRPC/Protobuf plugin interface definitions for Sago (compiled with the pure-Rust protox toolchain — no system protoc required)."
publish = false

[dependencies]
prost = "0.14"
tonic = "0.14"
tonic-prost = "0.14"

[build-dependencies]
# protox is a pure-Rust protobuf compiler: it parses the .proto files and emits
# a FileDescriptorSet without any system `protoc` binary. tonic-prost-build then
# generates the Rust bindings from that descriptor set.
protox = "0.9"
tonic-prost-build = "0.14"
