[package]
name = "sago-sdk"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Rust SDK for building custom integrations and extensions on top of Sago."

[dependencies]
sago-core = { path = "../sago-core", version = "0.1.0" }
async-trait.workspace = true
arrow.workspace = true
tokio.workspace = true
anyhow.workspace = true
serde.workspace = true

[dev-dependencies]
tempfile.workspace = true
