[package]
name = "sago-sdk"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Rust SDK for building custom integrations and extensions on top of Sago."

[features]
# `grpc` adds a reference SagoService server/client over tonic, wrapping any
# `DataProvider`. Off by default so the SDK stays lean for consumers that only
# want the in-process API.
grpc = ["dep:sago-proto", "dep:tonic", "dep:tonic-prost", "dep:prost", "dep:thiserror"]

[dependencies]
sago-core = { path = "../sago-core", version = "0.1.0" }
async-trait.workspace = true
arrow.workspace = true
tokio.workspace = true
serde.workspace = true

# gRPC-only, gated behind the `grpc` feature.
sago-proto = { path = "../sago-proto", version = "0.1.0", optional = true }
tonic = { version = "0.14", optional = true }
tonic-prost = { version = "0.14", optional = true }
prost = { version = "0.14", optional = true }
thiserror = { workspace = true, optional = true }

[dev-dependencies]
tempfile.workspace = true
tokio-stream = "0.1"

[[example]]
name = "grpc_server"
required-features = ["grpc"]
